<resources>
    <string name="app_name">Scheduler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="event_name">Event Name *</string>
    <string name="date">Date *</string>
    <string name="start_time">Start Time *</string>
    <string name="end_time">End Time *</string>
    <string name="notes">Notes</string>
    <string name="create">Create</string>
    <string name="new_event">New Event</string>
    <string name="title_activity_day_view">DayView</string>
    <string name="title_activity_week_view">WeekView</string>
    <string name="title_activity_month_view">MonthView</string>
    <string name="week_view">Week View</string>
    <string name="day_view">Day View</string>
    <string name="month_view">Month view</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="current_month">Current Month</string>
    <string name="current_date">Current Date</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="save">Save</string>
</resources>
