<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nz.ac.aut.sdp.scheduler.NewEvent">

    <TextView
        android:text="@string/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/event_name"
        android:clickable="true"
        android:inputType="text" />


    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_picker"
        android:focusable="false"
        android:inputType="date" />

    <TextView
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_timePicker"
        android:focusable="false"
        android:inputType="time" />

    <TextView
        android:text="@string/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end_timePicker"
        android:focusable="false"
        android:inputType="time" />

    <TextView
        android:text="@string/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/notes"
        android:clickable="true"
        android:inputType="text" />


    <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_button"
        android:onClick="createNewEvent"/>

</LinearLayout>
